--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,11 +5,23 @@ logging:
         web: DEBUG
       hibernate: DEBUG
 spring:
-  datasource:
-    url:  jdbc:h2:file:./h2/org2
-  jpa:
-    hibernate:
-      ddl-auto: update
   h2:
     console:
       enabled: true
+      path: /h2
+  datasource:
+    url: jdbc:h2:file:./h2/oocl-agile-fs
+    driverClassName: org.h2.Driver
+    database-platform: org.hibernate.dialect.H2Dialect
+    username: sa
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+  fiyway:
+    enabled: false
+  profiles:
+    active: local
+
+server:
+  port: 8088
